# glide

./: README
glide3x/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Linux-portability.txt  Makefile.DJ  Makefile.linux  Makefile.mingw  Makefile.wat  Makefile.win32  NEWS  README  README.2  acsite.m4  build.3dfx.in  chores.3dfx  clean_djgpp.sh  config.mak  configure.in  cross_djgpp.sh  g3_mak.bat  libtool  ltmain.sh  makefile.autoconf.am  makefile.linux
glide3x/cvg/: makefile.autoconf.am  makefile.linux  makefile.unix
glide3x/cvg/binsrc/: makefile.linux
glide3x/cvg/glide3/: makefile.autoconf.am  makefile.linux  makefile.unix
glide3x/cvg/glide3/src/: .cvsignore  Makefile.DJ  Makefile.linux  Makefile.mingw  Makefile.wat  Makefile.win32  banner.inc  cpudtect.S  cpudtect.asm  cpuid.c  diget.c  diglide.c  digutex.c  disst.c  distate.c  distrip.c  ditex.c  fifo.c  fxbldno.c  fxgasm.c  fxglide.h  g3df.c  gaa.c  gbanner.c  gdraw.c  gerror.c  gglide.c  glfb.c  glide.h  glide.rc  glide3.rx  glidesys.h  glideutl.h  gpci.c  gsplash.c  gsst.c  gsstdef.h  gstrip.c  gtex.c  gtexdl.c  (+19 more)
glide3x/cvg/glide3/tests/: Makefile.DJ  Makefile.linux  Makefile.wat  Makefile.win32  display.c  makefile.distrib  makefile.linux  makefile.unix  sbench.c  test00.c  test01.c  test02.c  test03.c  test04.c  test04a.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test20.c  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c  test27.c  test28.c  test30.c  test31.c  (+9 more)
glide3x/cvg/include/: makefile.linux
glide3x/cvg/incsrc/: cvg.h  cvgdefs.h  cvginfo.h  cvgregs.h  fxhal.h  gdebug.h  makefile.autoconf.am  makefile.linux  sst1vid.h  vxd.h
glide3x/cvg/init/: canopus.c  canopus.h  dac.c  fxremap.c  fxremap.h  gamma.c  gdebug.c  info.c  init.rc  makefile.autoconf.am  makefile.linux  makefile.unix  parse.c  print.c  rcver.h  sli.c  sst1init.c  sst1init.h  util.c  video.c
glide3x/cvg/lib/: makefile.linux
glide3x/cvg/libsrc/: makefile.linux
glide3x/h3/: makefile.autoconf.am  makefile.linux
glide3x/h3/binsrc/: makefile.linux
glide3x/h3/cinit/: h3cinit.c  h3cinit.h  h3cinit2.c  h3cinitdd.h  h4oempll.h  h4pll.h  makefile.linux  makefile.unix  memtable.h  modetabl.h  plltable.h
glide3x/h3/glide3/: makefile.linux
glide3x/h3/glide3/src/: Makefile.DJ  Makefile.linux  Makefile.mingw  Makefile.wat  Makefile.win32  assyntax.h  cpudtect.S  cpudtect.asm  diget.c  diglide.c  disst.c  distate.c  distrip.c  ditex.c  fifo.c  fxbldno.c  fxcmd.h  fxgasm.c  fxglide.h  fxsplash.h  g3df.c  g3ext.h  gaa.c  gbanner.c  gdraw.c  gerror.c  gglide.c  gglide.c.dri  gglide.c.save  glfb.c  glfb.c.dri  glfb.c.save  glide.h  glide.rc  glide3.rx  glidesys.h  glideutl.h  gpci.c  gsfc.c  gsfc.h  (+29 more)
glide3x/h3/glide3/tests/: Makefile.DJ  Makefile.linux  Makefile.wat  Makefile.win32  cmp.bat  makefile.distrib  makefile.linux  makefile.unix  sbench.c  test01.c  test04.c  test04a  test04a.c  test05.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test14.c  test16.c  test17.c  test18.c  test19.c  test20.c  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c  test28.c  test29.c  test30.c  test31.c  test34.c  test35.c  test36.c  test37.c  (+3 more)
glide3x/h3/include/: makefile.linux
glide3x/h3/incsrc/: fxhal.h  fxvid.h  gdebug.h  h3.h  h3cinit.h  h3defs.h  h3gdefs.h  h3hwc.h  h3info.h  h3regs.h  makefile.autoconf.am  makefile.linux  makefile.unix  sst1vid.h  vector.h
glide3x/h3/lib/: makefile.linux
glide3x/h3/libsrc/: makefile.linux
glide3x/h3/minihwc/: dos_mode.c  dxdrvr.c  fxhwc.h  gdebug.c  hwcext.h  hwcio.c  hwcio.h  initvga.h  lin_mode.c  lindri.h  linhwc.c  linhwc.c.dri  linhwc.c.save  makefile  makefile.autoconf.am  makefile.linux  minihwc.c  minihwc.h  qmodes.h  setmode.h  tv.h  win_mode.c
glide3x/h5/: makefile  makefile.autoconf.am  makefile.linux
glide3x/h5/binsrc/: makefile  makefile.linux
glide3x/h5/cinit/: h3cinit.c  h3cinit.h  h3cinitdd.h  h4oempll.h  h4pll.h  plltable.h
glide3x/h5/glide3/: .cvsignore  makefile  makefile.autoconf.am  makefile.linux
glide3x/h5/glide3/src/: Makefile.DJ  Makefile.linux  Makefile.mingw  Makefile.wat  Makefile.win32  banner.inc  cpudtect.S  cpudtect.asm  cpudtect.c  cpudtect.lst  cpudtect.s  cpuid.c  diget.c  diglide.c  disst.c  distate.c  distrip.c  ditex.c  fifo.c  fxbldno.c  fxcmd.h  fxgasm.c  fxglide.h  fxsplash.h  g3df.c  g3ext.h  gaa.c  gbanner.c  gdraw.c  gerror.c  gglide.c  glfb.c  glide.h  glide.rc  glidesys.h  glideutl.h  gpci.c  gsfc.c  gsfc.h  gsfctabl.h  (+43 more)
glide3x/h5/glide3/tests/: .cvsignore  Makefile.DJ  Makefile.linux  Makefile.mgw  Makefile.mingw  Makefile.wat  Makefile.win32  alpha.3df  cmp.bat  decal1.3df  display.c  glide.txs  makefile  makefile.linux  matt1.3df  miro.3df  sbench.c  t1kx32.3df  t256x32.3df  t512x32.3df  test00.c  test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  (+34 more)
glide3x/h5/include/: makefile  makefile.linux
glide3x/h5/incsrc/: cmddefs.h  cpuid.h  fxhal.h  fxvid.h  gdebug.h  gendate.c  h3cinit.h  h3defs.h  h3gdefs.h  h3hwc.h  h3info.h  h3regs.h  makefile  makefile.autoconf.am  makefile.linux  makefile.unix  sst1vid.h  vector.h  vxd.h
glide3x/h5/lib/: makefile  makefile.linux
glide3x/h5/libsrc/: makefile.linux
glide3x/h5/minihwc/: dos_mode.c  dxdrvr.c  fxhwc.h  gdebug.c  gpio.c  hwcext.h  hwcio.c  hwcio.h  initvga.h  lin_mode.c  lindri.h  linhwc.c  mac_mode.c  makefile  makefile.autoconf.am  makefile.linux  minihwc.c  minihwc.h  qmodes.h  setmode.h  tv.h  win_mode.c
glide3x/sst1/cmd/: makefile.linux
glide3x/sst1/cmd/pass/: makefile.linux  makefile.unix  pass.c
glide3x/sst1/glide3/src/: Makefile.DJ  Makefile.linux  Makefile.mingw  Makefile.wat  Makefile.win32  cpudtect.asm  gu.c  (+36 more)
glide3x/sst1/incsrc/: makefile.sun  ncc.h  sst.h
glide3x/sst1/init/: fxinit.h  h3drvr.c  init.c  init.h  makefile.linux  makefile.unix  sst1init.h  sst1vid.h  vg96drvr.c  vgdrvr.c
glide3x/sst1/libsrc/: makefile.linux
(+720 files in other folders)
